--- a/Sunshine/Sunshine/app/src/main/res/values/strings.xml
+++ b/Sunshine/Sunshine/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="pref_temperature_key" translatable="false">temperature</string>
     <string name="pref_temperature_label">Temperature Units</string>
     <string name="pref_temperature_default" translatable="false">metric</string>
+    <string name="show_location">Show location on map</string>
 </resources>
