--- a/Sunshine/Sunshine/app/src/main/res/values/strings.xml
+++ b/Sunshine/Sunshine/app/src/main/res/values/strings.xml
@@ -10,5 +10,8 @@
     <string name="pref_temperature_key" translatable="false">temperature</string>
     <string name="pref_temperature_label">Temperature Units</string>
     <string name="pref_temperature_default" translatable="false">metric</string>
+    <string name="pref_units_key">units</string>
+    <string name="pref_units_metric">metric</string>
+    <string name="pref_units_imperial">imperial</string>
     <string name="show_location">Show location on map</string>
 </resources>
